--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,186 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 
-    font-family: "PT Sans", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 26px;
-    color: black;
-    text-transform: uppercase;
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 26px;
+  color: 000000;
+  text-transform: uppercase;
 
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 a {
-    text-decoration: none;
-  }
+  text-decoration: none;
+}
 
 .main-navigation {
-    font-weight: bold;
+  font-weight: bold;
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.main-navigation {
+  list-style: none;
+}
+
+.main-navigation a {
+  color: #000000;
+}
+.main-navigation a:hover,
+.main-navigation a:focus {
+  color: #81b3d2;
+}
+.main-navigation a:active {
+  color: rgba(183, 183, 183, 0.3);
+}
+.main-navigation a:visited {
+  color: #b7b7b7;
+}
+
+.index-main-pic::after {
+  content: "";
+  background-image: url("img/ind/polygon-main-pic.png");
+}
+
+.container .main-slogan {
+  font-size: 21px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.reasons-attractions .reasons-info:nth-of-type(1),
+.reasons-info:nth-of-type(2) {
+  color: #ffffff;
+
+  background-color: #81b3d2;
+}
+
+.reasons-name,
+.attractions-name {
+  font-size: 21px;
+  font-weight: bold;
+  text-align: center;
+}
+.reasons-number {
+  text-align: center;
+}
+.reasons-description,
+.attractions-description {
+  text-align: center;
+}
+
+.reasons-attractions .reasons-info:nth-of-type(3),
+.reasons-info:nth-of-type(4),
+.reasons-info:nth-of-type(5) {
+  color: #000000;
+
+  background-color: #eeeeee;
+}
+
+.travel-search-form b {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 38px;
+}
+
+.travel-search-form p {
+  text-align: center;
+}
+
+.button {
+  font: inherit;
+  font-size: 21px;
+  font-weight: bold;
+
+  text-align: center;
+  color: #ffffff;
+  vertical-align: middle;
+  text-transform: uppercase;
+
+  background-color: #766357;
+  border: none;
+}
+
+.travel-search-button:hover,
+.travel-search-button:focus {
+  background-color: #604e43;
+}
+.travel-search-button:active {
+  color: rgba(131, 118, 111, 0.3);
+
+  background-color: #503e33;
+}
+
+.search-form fieldset{
+    border: none;
+}
+
+.search-form input {
+  font: inherit;
+  color: #000000;
+
+  background-color: #f2f2f2;
+  border: 2px solid #f2f2f2;
+}
+
+.search-form input:hover {
+  font: inherit;
+
+  background-color: #ebebeb;
+  border: 2px solid #ebebeb;
+}
+
+.search-form input:focus {
+  font: inherit;
+
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+}
+
+.search-form input::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #000000;
+}
+.search-form input::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #000000;
+}
+.search-form input:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #000000;
+}
+
+.search-submit {
+  background-color: #81b3d2;
+}
+
+.search-submit:hover,
+.search-submit:focus {
+  background-color: #669ec0;
+}
+.search-submit:active {
+  color: rgba(136, 182, 209, 0.3);
+
+  background-color: #5496bd;
+}
+
+.main-footer{
     color: #000000;
 
     background-color: #ffffff;
 }
 
-.main-navigation {
-    list-style: none;
-}
-
-.main-navigation a {
+.main-footer a{
     color: #000000;
 }
-.main-navigation a:hover {
-    color: #81b3d2;
-}
-.main-navigation a:active {
-    color: rgba(183, 183, 183, 0.3);
-}  
-.main-navigation a:visited {
-    color: #b7b7b7;
-}
 
-.index-main-pic::after {
-    content: "";
-    background-image: url("img/ind/polygon-main-pic.png");
+.main-footer li{
+    list-style: none;
 }
-
-.container .main-slogan{
+.sedona-hashtag{
     font-size: 21px;
-    font-weight: bold;
-    text-align: center;
 }
