--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ div.reasons-info.right {
   line-height: 21px;
 
   background-color: #81b3d2;
-  background-image: url("img/hotels/filters-background.jpg");
+  background-image: url("../img/hotels/filters-background.jpg");
   background-size: cover;
   background-position-y: center;
   background-repeat: no-repeat;
@@ -384,7 +384,7 @@ div.reasons-info.right {
 .main-header-logo{
   position: absolute;
   left: 44%;
-  z-index: 2;
+ 
 }
 
 .container {
@@ -399,44 +399,58 @@ div.reasons-info.right {
   padding: 0;
   
   width: 1200px;
-  height: 591px;
+  height: 509px;
   background-image: url("../img/ind/index-main-group.jpg");
-  background-position-y:
+  background-repeat: no-repeat;
+  background-position-y: -82px;
 
   position: relative;
  }
 .index-main-pic::after {
   content: "";
-  width: 1201px;
+  width: 100%;
   height: 59px;
 
   margin: 0;
   padding: 0;
-  background-image: url("img/ind/polygon.png");
+  background-image: url("../img/ind/polygon.png");
   background-repeat: no-repeat;
 
   position: absolute;
-  left: -1px;
+  bottom: -2px;
+  left:-1px;
+  
+  border-right: 1px solid white;
+}
+.index-main-title{
+  margin: 0;
+  padding: 0;
+
+  position: absolute;
+  top: 76px;
+  left: 370px;  
 }
 
 .main-slogan-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
+
+  position: relative;
+  top: -10px; 
 }
 .main-slogan,
-.main-slogan-wrapper p {
+.main-slogan-wrapper>p {
   margin: 0;
   padding: 0;
 }
 
 .main-slogan {
   width: 440px;
-  margin-top: 59px;
-  margin-bottom: 28px;
+  margin-top: 69px;
+  margin-bottom: 29px;
 }
-.main-slogan-wrapper p {
+.main-slogan-wrapper>p {
   padding-bottom: 51px;
 }
 
@@ -461,18 +475,20 @@ div.reasons-info.right {
   margin:0;
   padding: 0;
 }
+.reasons-name{
+  display: inline-block;
+  margin: auto;
+  width: 151px;
+}
+
 
 .reasons-number{
   display: inline-block;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.reasons-info h2{
-  display: inline-block;
-  margin: auto;
-  width: 151px;
-}
-.reasons-info .reasons-description{
+
+.reasons-description{
   display: inline-block;
   width: 306px;
   margin:auto;
@@ -487,30 +503,43 @@ div.reasons-info.left img{
   display: flex;
   justify-content: space-around;
 
-  padding-top:60px;
-  padding-bottom: 80px;
+  padding-top:61px;
+  padding-bottom: 68px;
 
   background-color: #ffffff;
 }
-.attractions-info.left{
-  width:252px;
+.attractions-name{
+  padding: 0;
+  margin: 0;
+  margin-bottom: 12px;
+}
+.attractions-info{
+  padding-top:100px;
+}
+.attractions-description{
+  display: inline-block;
+  width: 287px;
+  padding-left: 54px;
+}
+.attractions-info.left{  
+  width:33%;  
 
   background-position: top center;
-  background-image: url("img/icon-1.svg");
+  background-image: url("../img/icon-1.svg");
   background-repeat: no-repeat;
 }
 .attractions-info.center{
-  width: 284px;
+  width:33%;  
 
   background-position: top center;
-  background-image: url("img/icon-2.svg");
+  background-image: url("../img/icon-3.svg");
   background-repeat: no-repeat;
 }
 .attractions-info.right{
-  width: 273px;
+  width:33%;  
 
   background-position: top center;
-  background-image: url("img/icon-3.svg");
+  background-image: url("../img/icon-2.svg");
   background-repeat: no-repeat;
 }
 
@@ -524,8 +553,16 @@ div.reasons-info.left img{
 .reasons-container{
   display: flex;
   justify-content: space-around;
-  padding-top: 50px;
-  padding-bottom: 63px;
+
+}
+.reasons-container .reasons-description{
+  display: inline-block;
+
+  width: 260px;
+  padding-top: 5px;
+}
+.reasons-info:last-child .reasons-description{
+  width: 259px;
 }
 .form-wrapper{
   height: 297px;
