--- a/css/style.css
+++ b/css/style.css
@@ -374,9 +374,7 @@ div.reasons-info.right {
   justify-content: space-between;
   flex-wrap: wrap;
 
-  /* temp */
-  /* background: rgba(234, 255, 45, 0.2);
-  box-shadow: inset 0 0 0 2px rgb(234, 255, 45); */
+
 }
 .main-navigation li:nth-child(3) {
   margin-left: auto;
@@ -1020,12 +1018,13 @@ ul.sorting-parameters{
 .inner-item-hotel {
   width: 1056px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 18px;
   padding-bottom: 14px;  
 
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 .hotel-wrapper {
   width: 528px;
@@ -1046,7 +1045,39 @@ ul.sorting-parameters{
   display: inline-block;
   width: 50%; 
 }
+.found-hotel-ratings{
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 30px;
+ 
+}
+.found-hotel-ratings p{
+  display: inline-block;
+  padding: 5px 16px;
+  background-color: #f2f2f2;
+  margin: 0;
+  margin-top: 46px
+}
+.found-hotel-ratings b{
+  display: inline-block;
+  font-size: 0;
+}
 
+b.four-stars::before{
+  content: "";
+
+  background-image: url("../img/star.svg");
+  background-size: 21px;
+  width: 82px;
+  height: 19px;
+  
+  font-size: 0;
+  position: absolute;
+
+  top: 0;
+  left: 27px;
+
+}
 img {
   max-width: 100%;
 }
