--- a/css/style.css
+++ b/css/style.css
@@ -405,10 +405,13 @@ div.reasons-info.right {
   padding: 0;
 
   background-color: #ffffff;
-}
-.box-shadow-wrapper{
   box-shadow: 0px 0px 10px 0px #000000;
 }
+
+.hotels-footer{
+  box-shadow: 0px 3px 10px 0px #000000;
+}
+
 .index-main-pic {
   margin: 0;
   padding: 0;
